oop_mro/tests/trybuild/fail_override_non_virtual.stderr
error: method `speak` is marked `#[override]` but is not declared `virtual fn`
 --> tests/trybuild/fail_override_non_virtual.rs:6:12
  |
6 |         fn speak(&self) -> String {
  |            ^^^^^
