oop_mro/tests/trybuild/fail_override_non_virtual.rs
use oop_mro::prelude::*;

oop_class! {
    class Animal {
        #[override]
        fn speak(&self) -> String {
            String::new()
        }
    }
}

fn main() {}
